--- a/index.html
+++ b/index.html
@@ -150,9 +150,18 @@
     typeWriterEffect("typingSecret", ["รักเธอนะ 💖", "คิดถึงมากเท่าโลก 🌎", "My One and Only. 🥺", "I love you to the moon and back. 🌙"], 150, 1000);
 
     // ======================
-    // Interactive Image Effect
+    // Interactive Image Effect + เปลี่ยนรูป
     // ======================
     const img = document.getElementById("surpriseImg");
+
+    const images = [
+      "https://www.dropbox.com/scl/fi/3athp4wsgg7zavhuj6e3y/4EAD4311-549E-4B5A-8966-ADD54A6DA6A8.JPG?rlkey=vgn03xbakzcpsn6dnjczg2j2y&st=fm73n0sv&raw=1", // เปลี่ยนเป็นลิงก์รูปจริง
+      "https://www.dropbox.com/scl/fi/whx3ksjzhfyvp39jn26sd/IMG_3193.JPG?rlkey=y9beby70n0cjbn63pw28wpk7y&st=7jx11go6&raw=1",
+      "https://www.dropbox.com/scl/fi/oa20zxiw3y5fh7nk1z5u9/7B91CF55-19C2-4848-8FB6-6682BD580591.JPG?rlkey=mcdjt1fn0hmp91e8v5rfta1ts&st=d3uuwwg9&raw=1"
+      "https://www.dropbox.com/scl/fi/3xkzquiw3cod38w4zrdih/IMG_3621.JPG?rlkey=d48yeyljc3ds94m51f6mf8ysl&st=91ophrns&raw=1"
+
+    ];
+    let currentIndex = 0;
 
     img.addEventListener("click", () => {
       // ขยาย / เด้ง
@@ -170,6 +179,10 @@
 
         heart.addEventListener("animationend", () => heart.remove());
       }
+
+      // เปลี่ยนรูป
+      currentIndex = (currentIndex + 1) % images.length;
+      img.src = images[currentIndex];
     });
   </script>
 
