--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       to { transform: translateY(-10vh) rotate(45deg); opacity: 0; }
     }
 
-    /* เคอร์เซอร์กระพริบ */
     .cursor {
       display: inline-block;
       width: 3px;
@@ -47,7 +46,6 @@
       51%, 100% { opacity: 0; }
     }
 
-    /* หัวใจจากการคลิก ลอยขึ้นแล้วหาย */
     .click-heart {
       position: absolute;
       width: 15px;
@@ -92,25 +90,39 @@
   <p class="text-white text-lg">🎉 ได้เจอกันแล้ววววว 🎉 </p>
 
   <button 
+    id="loveBtn"
     class="mt-6 bg-pink-500 text-white px-4 py-2 rounded-full shadow-lg hover:bg-pink-600 transition"
-    onclick="document.getElementById('secret').classList.toggle('hidden')">
+    onclick="showSecret()">
     love u na babe 💌
   </button>
 
   <div id="secret" class="hidden mt-6 relative">
     <img 
       id="surpriseImg"
-      src="https://uce5add74cf519539e19c4d962d5.dl.dropboxusercontent.com/cd/0/inline/CvvTUZ5vjM3xNwDrJZUF9VQv0rKOclTSgwNUa8l3ItacJPDGVJLCyCn9BBU_fXhS1EL1J2iyuDL22rSLBBeaMCWHY5jcsYObQ6YRVlaf4RJAVtAnwXzLr0z45CJWsBNwPoz6ycdh2GdY29JRjI7d3kIR/file#" 
+      src="https://www.dropbox.com/scl/fi/xfx46q45r1zc35rrnlye5/B8610CD0-5B3B-4FAE-AD13-3E672B75920B.JPG?rlkey=8ru0amjaelsizj5ggsr9gz8t1&st=y9sroip4&raw=1" 
       alt="cute" 
       class="rounded-2xl shadow-lg w-40 mx-auto mb-4 cursor-pointer"
     >
     <p id="typingSecret" class="text-white text-xl"></p>
+
+    <!-- ปุ่มลิงก์ไป secret.html (เริ่มต้นซ่อน) -->
+    <a id="nextBtn" href="secret.html" 
+       class="hidden mt-6 inline-block bg-purple-500 text-white px-4 py-2 rounded-full shadow-lg hover:bg-purple-600 transition">
+      Go to Secret Page 💖
+    </a>
   </div>
 
   <script>
-    // ======================
+    function showSecret() {
+      document.getElementById('secret').classList.remove('hidden');
+
+      // รอ 7 วิแล้วโชว์ปุ่มไป secret.html
+      setTimeout(() => {
+        document.getElementById('nextBtn').classList.remove('hidden');
+      }, 7000);
+    }
+
     // Typewriter Effect
-    // ======================
     function typeWriterEffect(elementId, texts, speed = 150, delay = 1000) {
       const el = document.getElementById(elementId);
       let textIndex = 0;
@@ -149,27 +161,21 @@
     typeWriterEffect("typingHeader", ["ถึงคนที่ต้ารักที่สุด 💕", "To my love 💖"], 250, 1500);
     typeWriterEffect("typingSecret", ["รักเธอนะ 💖", "คิดถึงมากเท่าโลก 🌎", "My One and Only. 🥺", "I love you to the moon and back. 🌙"], 150, 1000);
 
-    // ======================
-    // Interactive Image Effect + เปลี่ยนรูป
-    // ======================
+    // Interactive Image Effect
     const img = document.getElementById("surpriseImg");
-
     const images = [
-      "https://www.dropbox.com/scl/fi/3athp4wsgg7zavhuj6e3y/4EAD4311-549E-4B5A-8966-ADD54A6DA6A8.JPG?rlkey=vgn03xbakzcpsn6dnjczg2j2y&st=fm73n0sv&raw=1", // เปลี่ยนเป็นลิงก์รูปจริง
+      "https://www.dropbox.com/scl/fi/3athp4wsgg7zavhuj6e3y/4EAD4311-549E-4B5A-8966-ADD54A6DA6A8.JPG?rlkey=vgn03xbakzcpsn6dnjczg2j2y&st=fm73n0sv&raw=1",
       "https://www.dropbox.com/scl/fi/whx3ksjzhfyvp39jn26sd/IMG_3193.JPG?rlkey=y9beby70n0cjbn63pw28wpk7y&st=7jx11go6&raw=1",
       "https://www.dropbox.com/scl/fi/oa20zxiw3y5fh7nk1z5u9/7B91CF55-19C2-4848-8FB6-6682BD580591.JPG?rlkey=mcdjt1fn0hmp91e8v5rfta1ts&st=d3uuwwg9&raw=1",
       "https://www.dropbox.com/scl/fi/3xkzquiw3cod38w4zrdih/IMG_3621.JPG?rlkey=d48yeyljc3ds94m51f6mf8ysl&st=91ophrns&raw=1"
-
     ];
     let currentIndex = 0;
 
     img.addEventListener("click", () => {
-      // ขยาย / เด้ง
       img.style.transition = "transform 0.3s";
       img.style.transform = "scale(1.3)";
       setTimeout(() => img.style.transform = "scale(1)", 300);
 
-      // สร้างหัวใจลอยขึ้น
       for (let i = 0; i < 5; i++) {
         const heart = document.createElement("div");
         heart.className = "click-heart";
@@ -180,7 +186,6 @@
         heart.addEventListener("animationend", () => heart.remove());
       }
 
-      // เปลี่ยนรูป
       currentIndex = (currentIndex + 1) % images.length;
       img.src = images[currentIndex];
     });
