--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To my love</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+<style>
+  body {
+    font-family: 'Itim', cursive;
+  }
+</style>
+
   <style>
     body {
       background: linear-gradient(to bottom right, #fbc2eb, #a6c1ee);
@@ -190,6 +197,53 @@
       img.src = images[currentIndex];
     });
   </script>
+
+<audio id="bgMusic" loop>
+  <source src="music.mp3" type="audio/mpeg">
+  เบราว์เซอร์ของคุณไม่รองรับการเล่นเสียง
+</audio>
+
+<button id="musicToggle">▶️</button>
+
+<style>
+  #musicToggle {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: #fff3;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 50%;
+    backdrop-filter: blur(4px);
+    transition: 0.2s;
+  }
+
+  #musicToggle:hover {
+    background: #fff6;
+    transform: scale(1.1);
+  }
+</style>
+
+<script>
+  const music = document.getElementById("bgMusic");
+  const toggle = document.getElementById("musicToggle");
+
+  let playing = false;
+
+  toggle.addEventListener("click", () => {
+    if (!playing) {
+      music.currentTime = 9; // ⏩ ข้ามไป 3 วินาทีแรก
+      music.play();
+      toggle.textContent = "🔊";
+    } else {
+      music.pause();
+      toggle.textContent = "▶️";
+    }
+    playing = !playing;
+  });
+</script>
 
 </body>
 </html>
