--- a/secret.html
+++ b/secret.html
@@ -1,25 +1,27 @@
-<!-- secret.html -->
 <!DOCTYPE html>
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>เธอรักเค้าไหม?</title>
-  <link href="https://fonts.googleapis.com/css2?family=Mali&display=swap" rel="stylesheet">
+  <title>Love Button 💖</title>
+  <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+<style>
+  body {
+    font-family: 'Itim', cursive;
+  }
+</style>
+
   <style>
     body {
-      font-family: 'Mali', cursive;
+      font-family: "Segoe UI", sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: linear-gradient(270deg, #ffe6f0, #ffd9e6, #ffb3cc, #ff99b3);
-      background-size: 800% 800%;
-      flex-direction: column;
-      text-align: center;
-      overflow: hidden;
-      position: relative;
+      margin: 0;
+      background: linear-gradient(120deg, #fbc2eb, #a6c1ee);
+      background-size: 400% 400%;
       animation: gradientBG 10s ease infinite;
-      transition: background 1s;
+      overflow: hidden;
     }
 
     @keyframes gradientBG {
@@ -28,142 +30,130 @@
       100% { background-position: 0% 50%; }
     }
 
+    @keyframes gradientBG2 {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .container {
+      text-align: center;
+      z-index: 2;
+    }
+
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 30px;
-      color: #d63384;
-      z-index: 1;
-      transition: opacity 0.5s;
+      color: white;
+      margin-bottom: 20px;
+      transition: opacity 0.5s ease;
     }
 
     .buttons {
       display: flex;
       gap: 20px;
       justify-content: center;
-      align-items: center;
-      position: relative;
-      z-index: 1;
     }
 
     button {
-      padding: 15px 30px;
-      font-size: 1.2rem;
+      padding: 10px 20px;
+      font-size: 18px;
       border: none;
-      border-radius: 12px;
+      border-radius: 10px;
       cursor: pointer;
-      transition: transform 0.3s ease, opacity 0.3s ease, left 0.2s, top 0.2s;
-      position: relative;
+      transition: transform 0.3s ease, background 0.3s ease;
     }
 
     #yesBtn {
-      background-color: #ff66b2;
+      background: #ff4b5c;
       color: white;
-      z-index: 1;
+      transform: scale(1);
     }
 
     #noBtn {
-      background-color: #999;
-      color: white;
-      z-index: 1;
+      background: #ccc;
+      color: black;
+      position: relative;
     }
 
     #message {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 4rem;
-      color: #ff3399;
       display: none;
-      text-align: center;
-      z-index: 10;
-      animation: fadeIn 1s forwards;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translate(-50%, -60%); }
-      to { opacity: 1; transform: translate(-50%, -50%); }
+      font-size: 28px;
+      color: white;
+      margin-top: 20px;
+      font-weight: bold;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.3);
     }
 
     .heart {
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      background: red;
-      transform: rotate(45deg);
-      animation: floatHeart 2s ease-out forwards;
-      z-index: 5;
-    }
-    .heart:before, .heart:after {
-      content: "";
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      background: red;
-      border-radius: 50%;
-    }
-    .heart:before { top: -10px; left: 0; }
-    .heart:after { left: -10px; top: 0; }
-
-    @keyframes floatHeart {
-      0% { transform: translateY(0) rotate(45deg); opacity: 1; }
-      100% { transform: translateY(-150px) rotate(45deg); opacity: 0; }
+      position: fixed;
+      color: #ff4b5c;
+      font-size: 24px;
+      pointer-events: none;
+      animation: floatUp 2s linear forwards;
     }
 
-    @keyframes gradientBG2 {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    @keyframes floatUp {
+      from { transform: translateY(0); opacity: 1; }
+      to { transform: translateY(-100px); opacity: 0; }
+    }
+
+    .falling-heart {
+      position: fixed;
+      top: -20px;
+      color: #ff4b5c;
+      font-size: 20px;
+      animation: fall 5s linear forwards;
+      pointer-events: none;
+    }
+
+    @keyframes fall {
+      from { transform: translateY(0); opacity: 1; }
+      to { transform: translateY(100vh); opacity: 0; }
     }
   </style>
 </head>
 <body>
-  <h1 id="question">เธอรักเค้าไหม?</h1>
-  <div class="buttons">
-    <button id="yesBtn">รัก</button>
-    <button id="noBtn">ไม่รัก</button>
+  <div class="container">
+    <h1 id="question">เธอรักเค้าามั้ย? 💕</h1>
+    <div class="buttons" id="buttons">
+      <button id="yesBtn">รัก 💖</button>
+      <button id="noBtn">ไม่รัก 💔</button>
+    </div>
+    <div id="message">เค้าก็รักเธอนะ! 💕🥰</div>
   </div>
-
-  <div id="message">เค้าก็รักเธอนะคะ 💖</div>
 
   <script>
     const yesBtn = document.getElementById("yesBtn");
     const noBtn = document.getElementById("noBtn");
     const message = document.getElementById("message");
-    const buttonsContainer = document.querySelector(".buttons");
+    const buttonsContainer = document.getElementById("buttons");
     const question = document.getElementById("question");
-
     let yesScale = 1;
-    let heartInterval;
 
     function createHeart(x, y) {
       const heart = document.createElement("div");
       heart.className = "heart";
-      heart.style.left = x + "px";
-      heart.style.top = y + "px";
+      heart.innerText = "💖";
+      heart.style.left = `${x}px`;
+      heart.style.top = `${y}px`;
       document.body.appendChild(heart);
-      heart.addEventListener("animationend", () => heart.remove());
-    }
 
-    function startHeartsRain() {
-      heartInterval = setInterval(() => {
-        const x = Math.random() * window.innerWidth;
-        const y = window.innerHeight + 20;
-        createHeart(x, y);
-      }, 150);
+      setTimeout(() => heart.remove(), 2000);
     }
 
     yesBtn.addEventListener("click", () => {
-      yesScale += 0.5; 
+      yesScale += 1; // โตทีละ 1 เท่า
       yesBtn.style.transform = `scale(${yesScale})`;
 
       const rect = yesBtn.getBoundingClientRect();
       for (let i = 0; i < 5; i++) {
-        createHeart(rect.left + rect.width/2 + (Math.random()*40-20), rect.top + rect.height/2 + (Math.random()*40-20));
+        createHeart(
+          rect.left + rect.width/2 + (Math.random()*40-20),
+          rect.top + rect.height/2 + (Math.random()*40-20)
+        );
       }
 
-      const rect2 = yesBtn.getBoundingClientRect();
-      if (rect2.width >= window.innerWidth || rect2.height >= window.innerHeight) {
+      // ถ้าโตถึงขนาด 5 เท่า = แสดงข้อความ + เปลี่ยนพื้นหลัง
+      if (yesScale >= 5) {
         message.style.display = "block";
         buttonsContainer.style.display = "none";
         question.style.opacity = 0;
@@ -176,30 +166,75 @@
       }
     });
 
-    function moveNoBtn() {
-      noBtn.style.position = "absolute";
-      const btnWidth = noBtn.offsetWidth;
-      const btnHeight = noBtn.offsetHeight;
+    noBtn.addEventListener("mouseover", () => {
+      const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+      const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+      noBtn.style.position = "fixed";
+      noBtn.style.left = `${x}px`;
+      noBtn.style.top = `${y}px`;
+    });
 
-      // กำหนดขอบเขตไม่เกิน 40% จากขอบหน้าจอ
-      const minX = window.innerWidth * 0.2;
-      const minY = window.innerHeight * 0.2;
-      const maxX = window.innerWidth * 0.6 - btnWidth;
-      const maxY = window.innerHeight * 0.6 - btnHeight;
+    function startHeartsRain() {
+      setInterval(() => {
+        const heart = document.createElement("div");
+        heart.className = "falling-heart";
+        heart.innerText = "💖";
+        heart.style.left = Math.random() * window.innerWidth + "px";
+        heart.style.fontSize = (Math.random()*20 + 20) + "px";
+        document.body.appendChild(heart);
 
-      let randomX, randomY, attempt = 0;
-      do {
-        randomX = Math.random() * (maxX - minX) + minX;
-        randomY = Math.random() * (maxY - minY) + minY;
-        attempt++;
-      } while (attempt < 10 && Math.abs(randomX - yesBtn.offsetLeft) < btnWidth && Math.abs(randomY - yesBtn.offsetTop) < btnHeight);
-
-      noBtn.style.left = `${randomX}px`;
-      noBtn.style.top = `${randomY}px`;
+        setTimeout(() => heart.remove(), 5000);
+      }, 200);
     }
-
-    // ปุ่ม "ไม่รัก" เด้งเฉพาะตอนคลิก
-    noBtn.addEventListener("click", moveNoBtn);
   </script>
+
+<audio id="bgMusic" loop>
+    <source src="music.mp3" type="audio/mpeg">
+    เบราว์เซอร์ของคุณไม่รองรับการเล่นเสียง
+  </audio>
+  
+  <button id="musicToggle">▶️</button>
+  
+  <style>
+    #musicToggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: #fff3;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 50%;
+      backdrop-filter: blur(4px);
+      transition: 0.2s;
+    }
+  
+    #musicToggle:hover {
+      background: #fff6;
+      transform: scale(1.1);
+    }
+  </style>
+  
+  <script>
+    const music = document.getElementById("bgMusic");
+    const toggle = document.getElementById("musicToggle");
+  
+    let playing = false;
+  
+    toggle.addEventListener("click", () => {
+      if (!playing) {
+        music.currentTime = 9; // ⏩ ข้ามไป 3 วินาทีแรก
+        music.play();
+        toggle.textContent = "🔊";
+      } else {
+        music.pause();
+        toggle.textContent = "▶️";
+      }
+      playing = !playing;
+    });
+  </script>
+  
+
 </body>
 </html>
